# TT-qtxor

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
